--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,29 +1,98 @@
+/* -------------------------------------------------------------------------- */
+/*                      Link color to match logo                              */
+/* -------------------------------------------------------------------------- */
 
-/* Scrollable container with a max-height of 100px */
-.scrollable-chunk {
-  max-height: 250px;
-  overflow-y: auto;
-  background-color: inherit;
-}
-
-/* Change the color of the links to match logo */
 a {
   color: #5793A3;
   text-decoration: none;
 }
 
-/* Add a tiled watermark background */
-body::after {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-image: url('../images/cyclistic_logo.png');
-  background-size: 10%;
-  background-repeat: repeat;
-  opacity: 0.5; /* Adjust the opacity as needed */
-  z-index: -1;
-  transform: rotate(45deg); /* Adjust the rotation angle as needed */
+a:hover {
+  color: #F6FC7E;
+}
+
+/* -------------------------------------------------------------------------- */
+/*                            Whhite space                              */
+/* -------------------------------------------------------------------------- */
+
+.title {
+  margin-top: 2em !important;
+  margin-bottom: 0.75em;
+}
+
+.section h1,
+.section h2{ 
+  padding-top: 2.5em !important; 
+  margin-bottom: 0.75em;
+}
+
+.section h3, 
+.section h4, 
+.section h5 {
+  padding-top: 2em !important;
+  margin-bottom: 0.75em;
+}
+
+
+/*----------------------------------------------------------------------------*/
+/*                                TOC                                         */
+/*----------------------------------------------------------------------------*/
+
+/* Logo above TOC */
+
+#TOC::before {
+  content: "";
+  display: block;
+  height: 200px;
+  margin: 2em 20px 40px 20px;
+  background-image: url("../images/cyclistic_logo.png");
+  background-size: contain;
+  background-position: center center;
+  background-repeat: no-repeat;
+  border: none;
+}
+
+#TOC {
+  border: none;
+}
+
+/* -------------------------------------------------------------------------- */
+/*                            Hero image                                      */
+/* -------------------------------------------------------------------------- */
+
+.hero-image {
+    position: relative;
+    margin-bottom: 2em;
+    /* liner gradient tints the image darker for readability*/
+    background-image: linear-gradient( rgba(0,0,0,.2), rgba(0,0,0,.2) ), url(../images/bikeshare_hero.jpg); 
+    height: 400px;
+    background-size: cover;
+    background-color: #5793A3;
+    background-position: 50% 55%;
+    display: flex; /* Change to `display: none` for no hero image */
+    justify-content: center;
+    align-items: center;
+}
+
+.top-text {
+  position: relative;
+  font-size: 34px;
+  padding-bottom: 0.5em;
+  text-transform: uppercase;
+  text-align: center;
+  display: block; /* Change to `display: none` for no top text */
+  color: #ffffff72;
+}
+
+.bottom-text {
+  position: relative;
+  letter-spacing: 0.065em;
+  line-height: 1em;
+  font-size: 68px;
+  text-transform: uppercase;
+  text-align: center;
+  display: block; /* Change to `display: none` for no bottom text */
+  color: #ffffff;
+  margin-bottom: 2.5rem;
+  font-weight: bold;
 }
