--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -68,7 +68,7 @@ a:hover {
     position: relative;
     margin-bottom: 2em;
     /* liner gradient tints the image darker for readability*/
-    background-image: linear-gradient( rgba(0,0,0,.2), rgba(0,0,0,.2) ), url(../images/bikeshare_hero.png); 
+    background-image: linear-gradient( rgba(0,0,0,.2), rgba(0,0,0,.2) ), url(../images/chicago_bikeshare.png); 
     height: 100vh;
     background-size: cover;
     background-color: #5793A3;
